--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,7 @@
 .vscode
 .DS_Store
 db.sqlite3
-__pycache__
+*__pycache__
 *.pyc
 *.pyo
 *.pyd
-api42/__pycache__
-backend/__pycache__
-frontend/__pycache__
-PongJungle/__pycache__
-db.sqlite3-journal
