--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,8 @@
 FROM nginx:alpine
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY certs     /etc/nginx/certs
+#COPY ./proxy_params /etc/nginx/proxy_params
 
 COPY templates /usr/share/nginx/html/templates
 COPY static /usr/share/nginx/html/static
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
