Login&Signup and 42 API Login&Signup is clear and for save

--- a/Chat/Dockerfile
+++ b/Chat/Dockerfile
@@ -1,29 +1,24 @@
-# Dockerfile for a Django backend project
-
-# Base image olarak Python 3.9 slim sürümünü kullan. Slim sürüm, boyutu azaltılmış ve gereksiz paketler çıkarılmıştır.
+# Base image olarak Python 3.9 slim sürümünü kullan
 FROM python:3.9-slim
 
 # Ortam değişkenlerini ayarla
-ENV PYTHONUNBUFFERED 1
-ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1
 
 # Çalışma dizinini oluştur ve ayarla
 WORKDIR /app
 
-COPY requirements.txt .
-COPY automation.sh .
+# PostgreSQL client'ı kur
+RUN apt-get update && apt-get install -y postgresql-client
+
+# Önce requirements.txt ve automation.sh dosyasını kopyala
+COPY requirements.txt ./
+
+# Bağımlılıkları kur ve automation.sh betiğini çalıştır
+RUN pip install --no-cache-dir -r requirements.txt 
 
 # Uygulama kodunu kopyala
-COPY . /app
+COPY . .
 
-RUN pip install --no-cache-dir -r requirements.txt \
-    && chmod +x automation.sh \
-    && bash automation.sh
-
-
-
-#(Django için genelde 8000 kullanılır ama bizim yaml dosyasında 9090)
+# Uygulama için gerekli portu aç
 EXPOSE 9090
-
-# Uygulamayı çalıştırma komutu
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:9090"]
