--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django>=3.2,<4.2.10
 psycopg[binary]
-channels==4.0.0
 daphne==4.1.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt
 requests
+uvicorn
