--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,6 +22,24 @@ http {
             add_header 'Access-Control-Allow-Origin' '*';
         }
 
+		location /api42/ {
+			proxy_pass http://api42:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/api42(/.*)$ $1 break;
+		}
+
+		location /backend/ {
+			proxy_pass http://backend:9191;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/backend(/.*)$ $1 break;
+		}
+
         # Diğer yapılandırmalar...
     }
 }
