--- a/postgres/postgresql.conf
+++ b/postgres/postgresql.conf
@@ -1,8 +1,3 @@
-# -----------------------------
-# PostgreSQL Yapılandırma Dosyası
-# -----------------------------
-
-# Bağlantı ve Kimlik Doğrulama Ayarları
 listen_addresses = '*'          # '*' sunucunun tüm ağ arayüzlerinde dinlemesi anlamına gelir
 port = 5432                     # PostgreSQL sunucusunun dinlediği port
 
@@ -12,10 +7,11 @@ work_mem = 64MB                 # Sıralama işlemleri için kullanılan bellek 
 maintenance_work_mem = 128MB    # DB bakım işlemleri için kullanılan maksimum bellek miktarı
 
 # Yazma ve Günlükleme Ayarları
-wal_level = minimal             # Write-Ahead Logging seviyesi: minimal, replica veya logical
+wal_level = replica             # 'replica' WAL kayıt detay seviyesi, replikasyon için gerekli
 checkpoint_timeout = 5min       # Otomatik güvenlik kontrol noktaları arasındaki maksimum süre
 archive_mode = off              # WAL dosyalarını arşivleme modu
 archive_command = ''            # WAL dosyalarını arşivlemek için kullanılacak komut
+max_wal_senders = 10            # Eş zamanlı WAL gönderen maksimum süreç sayısı
 
 # Çeşitli Performans Ayarları
 default_statistics_target = 100 # İstatistik toplama için varsayılan hedef
@@ -24,10 +20,3 @@ effective_cache_size = 512MB    # Planlayıcının kullanabileceği etkili belle
 
 # Bağlantı Sayısı
 max_connections = 100           # Aynı anda izin verilen maksimum bağlantı sayısı
-
-# Replication Ayarları (Gerektiğinde)
-#max_replication_slots = 0     # Replication slotlarının maksimum sayısı
-#max_wal_senders = 0           # Maksimum WAL gönderici süreç sayısı
-
-# Özellikle büyük veritabanları veya yüksek trafikli ortamlar için bu ayarları optimize etmek önemlidir.
-# Uygulamanızın ve altyapınızın ihtiyaçlarına göre ayarları özenle seçin ve dikkatli bir şekilde test edin.
