--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,10 @@
 .DS_Store
-blogApp/.venv
-blogApp/.vscode
-blogApp/.DS_Store
-blogApp/db.sqlite3
-.idea
 .venv
 .vscode
 .DS_Store
 db.sqlite3
-__pycache__
+*__pycache__
 *.pyc
 *.pyo
 *.pyd
-api42/__pycache__
-backend/__pycache__
-frontend/__pycache__
-PongJungle/__pycache__
-db.sqlite3-journal
+.env
