--- a/Api42/Dockerfile
+++ b/Api42/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.9-slim
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
-WORKDIR /app
+WORKDIR /code
 
 COPY requirements.txt .
 
