--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -39,5 +39,23 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             rewrite ^/Backend(/.*)$ $1 break;
 		}
+
+		location /chat/ {
+			proxy_pass http://chat:9090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/chat(/.*)$ $1 break;
+		}
+
+		location /game/ {
+			proxy_pass http://game:5050;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            rewrite ^/game(/.*)$ $1 break;
+		}
     }
 }
