API communication changed with JWT

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim
 
 # Ortam değişkenlerini ayarla
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+	PYTHONDONTWRITEBYTECODE=1
 
 # Çalışma dizinini oluştur
 WORKDIR /code
@@ -15,13 +15,13 @@ RUN apt-get update && apt-get install -y postgresql-client
 COPY requirements.txt .
 
 RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+	pip install --no-cache-dir -r requirements.txt
 
 # Uygulama kodunu kopyala
 COPY . .
 
 # Veritabanı migrasyonlarını yap
-RUN python3 manage.py makemigrations
+#RUN python3 manage.py makemigrations
 
 # Uygulama için gerekli portu aç
 EXPOSE 9191
