--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,39 @@ services:
   api42:
     container_name: api42
     build: ./Api42
+    environment:
+      - POSTGRES_PASSWORD_API=${POSTGRES_PASSWORD_API}
+      - POSTGRES_USER_API=${POSTGRES_USER_API}
+      - POSTGRES_DB_API=${POSTGRES_DB_API}
+      - POSTGRES_HOST_API=${POSTGRES_HOST_API}
+      - JWT_SIGNKEY=${JWT_SIGNKEY}
+      - POSTGRES_PORT_API=${POSTGRES_PORT_API}
     command: uvicorn ApiMain.asgi:application --host 0.0.0.0 --port 8080 --reload
     volumes:
       - ./Api42:/code
     ports:
       - "8080:8080"
+    networks:
+      - nw
+    depends_on:
+      - dbapi42
+
+  backend:
+    build: ./Backend
+    command: uvicorn Backend.asgi:application --host 0.0.0.0 --port 9191 --reload
+    container_name: backend
+    environment:
+      - POSTGRES_PASSWORD_BACKEND=${POSTGRES_PASSWORD_BACKEND}
+      - POSTGRES_USER_BACKEND=${POSTGRES_USER_BACKEND}
+      - POSTGRES_DB_BACKEND=${POSTGRES_DB_BACKEND}
+      - POSTGRES_HOST_BACKEND=${POSTGRES_HOST_BACKEND}
+      - POSTGRES_PORT_BACKEND=${POSTGRES_PORT_BACKEND}
+    volumes:
+      - ./Backend:/code
+    ports:
+      - "9191:9191"
+    depends_on:
+      - dbbackend
     networks:
       - nw
 
@@ -22,21 +50,10 @@ services:
     command: uvicorn Chat.asgi:application --host 0.0.0.0 --port 9090 --reload
     volumes:
       - ./Chat:/code
+      - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
     ports:
       - "9090:9090"
-    networks:
-      - nw
-
-  backend:
-    build: ./Backend
-    command: uvicorn Backend.asgi:application --host 0.0.0.0 --port 9191 --reload
-    container_name: Backend
-    volumes:
-      - ./Backend:/code
-    ports:
-      - "9191:9191"
-    depends_on:
-      - db
     networks:
       - nw
 
@@ -46,6 +63,8 @@ services:
     command: uvicorn Game.asgi:application --host 0.0.0.0 --port 5050 --reload
     volumes:
       - ./Game:/code
+      - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
     ports:
       - "5050:5050"
     networks:
@@ -63,27 +82,44 @@ services:
       - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
       - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
     depends_on:
-      - api42
       - chat
       - backend
       - game
     networks:
       - nw
 
-  db:
+  dbbackend:
     image: postgres:latest
-    container_name: db
-    command: postgres -c config_file=/etc/postgresql/postgresql.conf
+    container_name: dbbackend
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_BACKEND}
+      - POSTGRES_USER=${POSTGRES_USER_BACKEND}
+      - POSTGRES_DB=${POSTGRES_DB_BACKEND}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./postgres/postgresql.conf:/etc/postgresql/postgresql.conf
-      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+      - ./init/init-backend:/docker-entrypoint-initdb.d
+      - postgres_data_backend:/var/lib/postgresql/data
+      - ./postgres/postgresql_backend/postgresql.conf:/etc/postgresql/postgresql.conf
+    ports:
+      - "5433:5432"
+    networks:
+      - nw
+
+  dbapi42:
+    image: postgres:latest
+    container_name: dbapi42
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_API}
+      - POSTGRES_USER=${POSTGRES_USER_API}
+      - POSTGRES_DB=${POSTGRES_DB_API}
+    volumes:
+      - ./init/init-api42:/docker-entrypoint-initdb.d
+      - postgres_data_api42:/var/lib/postgresql/data
+      - ./postgres/postgresql_api/postgresql.conf:/etc/postgresql/postgresql.conf
     ports:
       - "5432:5432"
     networks:
       - nw
 
 volumes:
-  postgres_data:
+  postgres_data_backend:
+  postgres_data_api42:
