--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     command: uvicorn ApiMain.asgi:application --host 0.0.0.0 --port 8080 --reload
     volumes:
       - ./Api42:/code
+      - ./images:/code/images
     ports:
       - "8080:8080"
     networks:
@@ -79,6 +80,7 @@ services:
       - "443:443"
     volumes:
       - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./images:/usr/share/nginx/html/static/pofiles/image/
       - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
       - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
     depends_on:
