--- a/Api42/Dockerfile
+++ b/Api42/Dockerfile
@@ -7,12 +7,23 @@ ENV PYTHONDONTWRITEBYTECODE 1
 
 WORKDIR /code
 
+# PostgreSQL client'ı (pg_isready için) ve diğer bağımlılıkları yükle
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends postgresql-client && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-#RUN python3 manage.py makemigrations
+RUN python3 manage.py makemigrations
 
 EXPOSE 8080
+
+COPY entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
