--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -3,50 +3,367 @@ events {
 }
 
 http {
-    include       mime.types;
+    include mime.types;
+
     server {
         listen 80;
-        server_name localhost;
+        server_name peng.com.tr;
 
-        root /usr/share/nginx/html; # Kök dizini belirle
+        root /usr/share/nginx/html;
 
-        # Ana sayfaya erişim için
         location / {
-            root /usr/share/nginx/html/templates; # index.html için root dizinini belirle
-            try_files $uri $uri/ /index.html; # index.html'e yönlendir
+            root /usr/share/nginx/html/templates;
+            try_files $uri $uri/ /index.html;
         }
 
-        # /static/ yoluna yapılan istekler için
         location /static/ {
-            alias /usr/share/nginx/html/static/; # /static/ için alias kullan
+            alias /usr/share/nginx/html/static/;
             add_header 'Access-Control-Allow-Origin' '*';
         }
 
-		location /api42/ {
-			proxy_pass http://api42:8080;
+        location /api42/ {
+            proxy_pass http://api42:8080;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
             rewrite ^/api42(/.*)$ $1 break;
-		}
+        }
 
-		location /backend/ {
-			proxy_pass http://Backend:9191;
+        location /backend/ {
+            proxy_pass http://backend:9191;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            rewrite ^/Backend(/.*)$ $1 break;
-		}
-
-		location /game/ {
-			proxy_pass http://game:5050;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            rewrite ^/game(/.*)$ $1 break;
-		}
+        }
     }
 }
+
+
+
+
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     include mime.types;
+
+#     server {
+#         listen 80;
+#         server_name peng.com.tr;
+
+#         root /usr/share/nginx/html;
+
+#         location / {
+#             root /usr/share/nginx/html/templates;
+#             try_files $uri $uri/ /404.html; # 404 sayfasına yönlendirme
+#         }
+
+#         location /static/ {
+#             alias /usr/share/nginx/html/static/;
+#             add_header 'Access-Control-Allow-Origin' '*';
+#         }
+
+#         location /api42/ {
+#             proxy_pass http://api42:8080;
+#             proxy_set_header Host $host;
+#             rewrite ^/api42(/.*)$ $1 break;
+#         }
+
+#         location /backend/ {
+#             proxy_pass http://backend:9191;
+#             proxy_set_header Host $host;
+#             rewrite ^/backend(/.*)$ $1 break;
+#         }
+
+#         error_page 404 /404.html;
+#         location = /404.html {
+#             root /usr/share/nginx/html/templates/; # 404.html dosyasının bulunduğu klasörü belirtin
+#             internal;
+#         }
+#     }
+# }
+
+
+
+
+
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     include       mime.types;
+
+#     # HTTPS sunucusu için yapılandırma
+
+#     server {
+#         listen 80;
+#         server_name peng.com.tr; # Server adını güncelle
+#         return 301 https://$host$request_uri; # Tüm HTTP trafiklerini HTTPS'ye yönlendir
+#     }
+
+
+#     server {
+#         listen 443 ssl; # 443 portunu SSL ile dinle
+#         server_name peng.com.tr; # Server adını güncelle
+
+#         # SSL sertifika ve anahtar dosyalarını belirtin
+#         ssl_certificate /etc/nginx/ssl/fullchain.pem; # Sertifika dosyanızın yolu
+#         ssl_certificate_key /etc/nginx/ssl/privkey.pem; # Özel anahtar dosyanızın yolu
+#         ssl_protocols TLSv1.3; # Kullanılacak TLS protokolleri
+
+
+#         root /usr/share/nginx/html; # Kök dizini belirle
+
+#         # Ana sayfaya erişim için
+#         location / {
+#             root /usr/share/nginx/html/templates; # index.html için root dizinini belirle
+#         }
+
+#         # /static/ yoluna yapılan istekler için
+#         location /static/ {
+#             alias /usr/share/nginx/html/static/; # /static/ için alias kullan
+#             add_header 'Access-Control-Allow-Origin' '*';
+#         }
+
+#         location /api42/ {
+#             proxy_pass http://api42:8080;
+#             proxy_set_header Host $host;
+#             rewrite ^/api42(/.*)$ $1 break;
+#         }
+
+#         location /backend/ {
+#             proxy_pass http://Backend:9191;
+#             proxy_set_header Host $host;
+#             rewrite ^/Backend(/.*)$ $1 break;
+#         }
+#     }
+# }
+
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     include mime.types;
+
+#     server {
+#         listen 80;
+#         server_name peng.com.tr;
+
+#         # HTTP trafiğini HTTPS'e yönlendir
+#         return 301 https://$host$request_uri;
+#     }
+
+#     server {
+#         listen 443 ssl;
+#         server_name peng.com.tr;
+
+#         # SSL sertifikası ve anahtar dosyalarını belirtin
+#         ssl_certificate /etc/nginx/ssl/fullchain.pem; # Sertifika dosyanızın yolu
+#         ssl_certificate_key /etc/nginx/ssl/privkey.pem
+
+#         root /var/www/html;
+#         index index.html;
+
+#         location / {
+#             try_files $uri $uri/ /index.html;
+#         }
+
+#         location /api/ {
+#             proxy_pass  http://api42:8080;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#             proxy_redirect off;
+#         }
+
+#         location /static/ {
+#             alias /var/www/static/;
+#         }
+
+#         location /uploads/ {
+#             alias /var/www/uploads/;
+#         }
+
+#         # Diğer konumlar ve ayarlar buraya eklenebilir
+#     }
+# }
+
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     include       mime.types;
+#     server {
+#         listen 80;
+#         server_name localhost;
+
+#         root /usr/share/nginx/html; # Kök dizini belirle
+
+#         # Ana sayfaya erişim için
+#         location / {
+#             root /usr/share/nginx/html/templates; # index.html için root dizinini belirle
+#             try_files $uri $uri/ /index.html; # index.html'e yönlendir
+#         }
+
+#         # /static/ yoluna yapılan istekler için
+#         location /static/ {
+#             alias /usr/share/nginx/html/static/; # /static/ için alias kullan
+#             add_header 'Access-Control-Allow-Origin' '*';
+#         }
+
+# 		location /api42/ {
+# 			proxy_pass http://api42:8080;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#             rewrite ^/api42(/.*)$ $1 break;
+# 		}
+
+# 		location /backend/ {
+# 			proxy_pass http://Backend:9191;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#             rewrite ^/Backend(/.*)$ $1 break;
+# 		}
+
+# 		location /game/ {
+# 			proxy_pass http://game:5050;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#             rewrite ^/game(/.*)$ $1 break;
+# 		}
+#     }
+# }
+
+
+
+# ----------------------
+
+# vents {
+#     worker_connections 1024;
+# }
+# http {
+#     include mime.types;
+
+#     server {
+#         listen 80;
+#         server_name localhost;
+#         root /usr/share/nginx/html;
+#         location / {
+#             root /usr/share/nginx/html/templates;
+#             try_files $uri $uri/ /index.html;
+#         }
+#         location /static/ {
+#             alias /usr/share/nginx/html/static/;
+#             add_header 'Access-Control-Allow-Origin' '*';
+#         }
+#         location /backend/ {
+#             proxy_pass http://backend:9191/;  # Backend uygulamasına proxy geçişi
+#         }
+
+#         location /api42/ {
+#             proxy_pass http://api42:8080/;  # API uygulamasına proxy geçişi
+#         }
+
+#         # location /frontend/ {
+#         #     proxy_pass http://frontend:80/;  # API uygulamasına proxy geçişi
+#         # }
+#     }
+#     server {
+#         listen [::]:443 ssl;
+#         listen 443 ssl;
+
+#         root /usr/share/nginx/html/templates;
+#         index index.html;
+
+#         error_log /var/log/nginx/error.log;
+#         access_log /var/log/nginx/access.log;
+
+#         server_name peng.com.tr;
+
+#         ssl_certificate /etc/nginx/ssl/fullchain.pem;
+#         ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+#         error_page 404 /index.php;
+
+#         location / {
+#             try_files $uri $uri/ /index.php?$query_string;
+#         }
+#     }
+# }
+
+# events {
+#     worker_connections 1024;
+# }
+
+# http {
+#     include mime.types;
+
+#     server {
+#         listen 80;
+#         server_name peng.com.tr;
+
+#         # HTTP'den HTTPS'ye yönlendirme devre dışı bırakıldı
+#         # Bu bloğu statik içerik sunmak veya HTTP üzerinden hizmet vermek için kullanabilirsiniz
+#         root /usr/share/nginx/html/templates;  # HTTP sunucusu için kök dizin
+
+#         location / {
+#             try_files $uri $uri/ /index.html;  # Dosyaları ve dizinleri deneyin, bulunamazsa index.html'e yönlendirin
+#         }
+
+#         location /static/ {
+#             add_header 'Access-Control-Allow-Origin' '*';
+#             alias /usr/share/nginx/html/static/;  # Statik dosyalar için özel bir yol
+#         }
+
+#         location /backend/ {
+#             proxy_pass http://backend:9191/;  # Backend uygulamasına proxy geçişi
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+
+#         location /api42/ {
+#             proxy_pass http://api42:8080/;  # API uygulamasına proxy geçişi
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+
+#         location /frontend/ {
+#             proxy_pass http://frontend:80/;  # API uygulamasına proxy geçişi
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+
+#     server {
+#         listen 443 ssl;
+#         server_name peng.com.tr;
+
+#         ssl_certificate /etc/nginx/certs/localhost.crt;  # SSL sertifika yolu
+#         ssl_certificate_key /etc/nginx/certs/localhost.key;  # SSL anahtar yolu
+
+#         root /usr/share/nginx/html;  # HTTPS sunucusu için kök dizin
+        
+#         location / {
+#             root /usr/share/nginx/html/templates;  # Özel içerikler için başka bir kök dizin
+#             try_files $uri $uri/ /index.html;  # Dosyaları ve dizinleri deneyin, bulunamazsa index.html'e yönlendirin
+#             # proxy_pass http://peng.com.tr/; Bu satır devre dışı bırakıldı
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         }
+
+#         # Diğer location blokları HTTP bloğundan miras alınmıştır, tekrarlanmasına gerek yoktur
+#     }
+# }
