--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     entrypoint: /entrypoint.sh
     command: uvicorn ApiMain.asgi:application --host 0.0.0.0 --port 8080 --reload
     environment:
-      - POSTGRES_PASSWORD_API=${POSTGRES_PASSWORD_API}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER_API=${POSTGRES_USER_API}
       - POSTGRES_DB_API=${POSTGRES_DB_API}
       - POSTGRES_HOST_API=${POSTGRES_HOST_API}
@@ -25,7 +25,7 @@ services:
     networks:
       - nw
     depends_on:
-      - dbapi42
+      - dbapi
 
   backend:
     container_name: backend
@@ -33,7 +33,7 @@ services:
     command: uvicorn Backend.asgi:application --host 0.0.0.0 --port 9191 --reload
     entrypoint: /entrypoint.sh
     environment:
-      - POSTGRES_PASSWORD_BACKEND=${POSTGRES_PASSWORD_BACKEND}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER_BACKEND=${POSTGRES_USER_BACKEND}
       - POSTGRES_DB_BACKEND=${POSTGRES_DB_BACKEND}
       - POSTGRES_HOST_BACKEND=${POSTGRES_HOST_BACKEND}
@@ -46,28 +46,6 @@ services:
       - dbbackend
     networks:
       - nw
-
-  game:
-    build: ./Game
-    container_name: game
-    command: uvicorn Game.asgi:application --host 0.0.0.0 --port 5050 --reload
-    entrypoint: /entrypoint.sh
-    environment:
-      - POSTGRES_PASSWORD_GAME=${POSTGRES_PASSWORD_GAME}
-      - POSTGRES_USER_GAME=${POSTGRES_USER_GAME}
-      - POSTGRES_DB_GAME=${POSTGRES_DB_GAME}
-      - POSTGRES_HOST_GAME=${POSTGRES_HOST_GAME}
-      - POSTGRES_PORT_GAME=${POSTGRES_PORT_GAME}
-    volumes:
-      - ./Game:/code
-      - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
-      - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
-    ports:
-      - "5050:5050"
-    networks:
-      - nw
-    depends_on:
-      - dbgame
 
   nginx:
     build: ./frontend
@@ -83,7 +61,6 @@ services:
       - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
     depends_on:
       - backend
-      - game
     networks:
       - nw
 
@@ -91,45 +68,27 @@ services:
     image: postgres:latest
     container_name: dbbackend
     environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_BACKEND}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER_BACKEND}
       - POSTGRES_DB=${POSTGRES_DB_BACKEND}
     volumes:
       - ./init/init-backend:/docker-entrypoint-initdb.d
       - postgres_data_backend:/var/lib/postgresql/data
-      - ./postgres/postgresql_backend/postgresql.conf:/etc/postgresql/postgresql.conf
-    ports:
+    ports: 
       - "5433:5432"
     networks:
       - nw
 
-  dbapi42:
+  dbapi:
     image: postgres:latest
     container_name: dbapi42
     environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_API}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_USER=${POSTGRES_USER_API}
       - POSTGRES_DB=${POSTGRES_DB_API}
     volumes:
       - ./init/init-api42:/docker-entrypoint-initdb.d
-      - postgres_data_api42:/var/lib/postgresql/data
-      - ./postgres/postgresql_api/postgresql.conf:/etc/postgresql/postgresql.conf
-    ports:
-      - "5432:5432"
-    networks:
-      - nw
-
-  dbgame:
-    image: postgres:latest
-    container_name: dbgame
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD_GAME}
-      - POSTGRES_USER=${POSTGRES_USER_GAME}
-      - POSTGRES_DB=${POSTGRES_DB_GAME}
-    volumes:
-      - ./init/init-game:/docker-entrypoint-initdb.d
-      - postgres_data_game:/var/lib/postgresql/data
-      - ./postgres/postgresql_game/postgresql.conf:/etc/postgresql/postgresql.conf
+      - postgres_data_api:/var/lib/postgresql/data
     ports:
       - "5431:5432"
     networks:
@@ -137,5 +96,4 @@ services:
 
 volumes:
   postgres_data_backend:
-  postgres_data_api42:
-  postgres_data_game:
+  postgres_data_api:
